--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -25,34 +25,24 @@
       <link href="https://www.googletagmanager.com/gtag/js?id=UA-190250545-1" rel="preload" as="script" />
       <link href="https://www.googletagmanager.com/gtag/js?id=G-NKBKFHN4MT" rel="preload" as="script" />
 
-      <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-
       <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="{% static 'edutim/combine.css' %}" />
 
-      {% comment %}
-      <!-- bootstrap.min css -->
+      {% comment %} <!-- bootstrap.min css -->
       <link rel="stylesheet" href="{% static 'edutim/vendors/bootstrap/bootstrap.css' %}" />
-
-      {% endcomment %}
-
-      <!-- Iconfont Css -->
-      {% comment %}
       <link
          rel="preload"
          as="style"
          onload="this.onload=null;this.rel='stylesheet'"
          href="{% static 'edutim/vendors/fontawesome/css/all.min.css' %}"
       />
-      {% endcomment %}
-
-      <!-- animate.css -->
-      {% comment %}
       <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="{% static 'edutim/vendors/animate-css/animate.css' %}" />
 
       <!-- Main Stylesheet -->
       <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="{% static 'edutim/css/style.css' %}" />
       <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="{% static 'edutim/css/responsive.css' %}" />
-      {% endcomment %}
+
+      
+       {% endcomment %}
 
       <!-- Global site tag (gtag.js) - Google Analytics -->
       {% comment %}
@@ -410,18 +400,18 @@
          </a>
       </div>
 
-      <link
-         rel="stylesheet"
-         href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css"
-         integrity="sha512-znmTf4HNoF9U6mfB6KlhAShbRvbt4CvCaHoNV0gyssfToNQ/9A0eNdUbvsSwOIUoJdMjFG2ndSvr0Lo3ZpsTqQ=="
-         crossorigin="anonymous"
-         referrerpolicy="no-referrer"
-      />
+   
       <link
          rel="preload"
          as="style"
          onload="this.onload=null;this.rel='stylesheet'"
          href="{% static 'edutim/vendors/fontawesome/css/all.min.css' %}"
+      />
+      <link
+         rel="preload"
+         as="style"
+         onload="this.onload=null;this.rel='stylesheet'"
+         href="{% static 'edutim/vendors/bicon/css/bicon.min.css' %}"
       />
 
       <!-- Main jQuery -->
