--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -82,6 +82,7 @@
 
          gtag("config", "G-K1L4WGV6EM");
       </script>
+
    </head>
 
    <body id="top-header">
@@ -417,13 +418,13 @@
       <!-- Main jQuery -->
       <script src="{% static 'edutim/vendors/jquery/jquery.js' %}"></script>
       <!-- Bootstrap 4.5 -->
-      <script src="{% static 'edutim/vendors/bootstrap/bootstrap.min.js' %}"></script>
-      <script src="{% static 'edutim/vendors/jquery.validate.min.js' %}"></script>
-      <script src="{% static 'edutim/vendors/jquery.form.min.js' %}"></script>
-      <script src="{% static 'edutim/vendors/sweetalert.min.js' %}"></script>
-      <script src="{% static 'edutim/vendors/handlebars.min.js' %}"></script>
-      <script src="{% static 'edutim/vendors/jquery.lazy.min.js' %}"></script>
-      <script src="{% static 'edutim/js/script.js' %}"></script>
+      <script async src="{% static 'edutim/vendors/bootstrap/bootstrap.min.js' %}"></script>
+      <script defer  src="{% static 'edutim/vendors/jquery.validate.min.js' %}"></script>
+      <script defer  src="{% static 'edutim/vendors/jquery.form.min.js' %}"></script>
+      <script async src="{% static 'edutim/vendors/sweetalert.min.js' %}"></script>
+      <script defer  src="{% static 'edutim/vendors/handlebars.min.js' %}"></script>
+      <script defer  src="{% static 'edutim/vendors/jquery.lazy.min.js' %}"></script>
+      <script defer  src="{% static 'edutim/js/script.js' %}"></script>
 
       <script>
          (function ($) {
