added defer to swal

--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -421,7 +421,7 @@
       <script async src="{% static 'edutim/vendors/bootstrap/bootstrap.min.js' %}"></script>
       <script defer  src="{% static 'edutim/vendors/jquery.validate.min.js' %}"></script>
       <script defer  src="{% static 'edutim/vendors/jquery.form.min.js' %}"></script>
-      <script async src="{% static 'edutim/vendors/sweetalert.min.js' %}"></script>
+      <script defer src="{% static 'edutim/vendors/sweetalert.min.js' %}"></script>
       <script defer  src="{% static 'edutim/vendors/handlebars.min.js' %}"></script>
       <script defer  src="{% static 'edutim/vendors/jquery.lazy.min.js' %}"></script>
       <script defer  src="{% static 'edutim/js/script.js' %}"></script>
