removed google event

--- a/app_cart/templates/checkout.html
+++ b/app_cart/templates/checkout.html
@@ -363,7 +363,7 @@ Checkout | pdhsafety.com
                         eventValue: _totalPrice
                     };
 
-                    ga('send', _opts);
+                   // ga('send', _opts);
                 }, 2000);
 
             };
@@ -378,7 +378,7 @@ Checkout | pdhsafety.com
                     eventValue: 'paypal'
                 };
 
-                ga('send', _opts);
+               /// ga('send', _opts);
 
             };
 
@@ -392,7 +392,7 @@ Checkout | pdhsafety.com
                     eventValue: 'paypal'
                 };
 
-                ga('send', _opts);
+              //  ga('send', _opts);
             };
 
             var payViaBank = function () {
