--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -500,7 +500,7 @@
                      eventValue: product.pk,
                   };
 
-                  ga("send", _opts);
+                 // ga("send", _opts);
                };
 
                var registerEvent = function () {
