fixing details, img lazy

--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -106,9 +106,9 @@
                     <div class="course-sidebar">
                         <div class="course-single-thumb">
                             {% if object.image %}
-                                <img src="{{ object.image }}" alt="" class="img-fluid w-100" width="320" height="279" />
+                                <img data-src="{{ object.image }}" alt="" class="img-fluid w-100 lazy" width="320" height="279" />
                             {% else %}
-                                <img src="{% static 'edutim/images/courses/course-' %}{% random_int 1 12 %}.jpg" width="320" height="279" alt="" class="img-fluid w-100"/>
+                                <img data-src="{% static 'edutim/images/courses/course-' %}{% random_int 1 12 %}.jpg" width="320" height="279" alt="" class="img-fluid w-100 lazy"/>
                             {% endif %}
                             <div class="course-price-wrapper">
                                 <div class="course-price">
@@ -464,7 +464,7 @@
                      $(this).addClass('d-none');
                        $(this).parent().find(".embed-responsive").removeClass('d-none');
                     });
-                    
+
                 };
 
                 var init = function () {
