--- a/app_students/templates/courses/list.html
+++ b/app_students/templates/courses/list.html
@@ -126,8 +126,8 @@
 
                 var init = function () {
                     registerEvent();
-                    getProfile();
-                    initImageForm();
+                  //  getProfile();
+                 //   initImageForm();
                 };
 
                 init();
