--- a/static/edutim/css/style.css
+++ b/static/edutim/css/style.css
@@ -208,7 +208,7 @@ a {
     color: #FF1949;
     outline: none;
     text-decoration: none;
-    transition: all 0.3s ease-in-out;
+    /* transition: all 0.3s ease-in-out; */
 }
 
 a:hover {
