--- a/app_students/templates/student_base.html
+++ b/app_students/templates/student_base.html
@@ -242,7 +242,9 @@
 
       <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.11.3/datatables.min.css" />
 
-      <script src="{% static 'edutim/vendors/jquery/jquery.js' %}"></script>
+      <script src="{% static 'edutim/combine.js' %}"></script>
+
+      {% comment %} <script src="{% static 'edutim/vendors/jquery/jquery.js' %}"></script>
       <script src="{% static 'edutim/vendors/jquery-ui/jquery-ui.min.js' %}"></script>
       <script src="{% static 'edutim/vendors/popper.min.js' %}"></script>
       <!-- Bootstrap 4.5 -->
@@ -253,7 +255,7 @@
       <script src="{% static 'edutim/vendors/handlebars.min.js' %}"></script>
       <script src="{% static 'edutim/vendors/moment.min.js'%}"></script>
       <script src="{% static 'edutim/vendors/summernote/summernote.min.js' %}"></script>
-      <script src="{% static 'edutim/vendors/summernote/summernote-bs4.min.js' %}"></script>
+      <script src="{% static 'edutim/vendors/summernote/summernote-bs4.min.js' %}"></script> {% endcomment %}
       <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.11.3/datatables.min.js"></script>
 
       <script src="{% static 'edutim/js/script.js' %}"></script>
