--- a/app_students/templates/student_base.html
+++ b/app_students/templates/student_base.html
@@ -22,6 +22,19 @@
       <link rel="canonical" href="https://pdhsafety.com{{ request.path }}" />
 
       <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="{% static 'edutim/combine.css' %}" />
+
+      <!-- Google tag (gtag.js) -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-HCVT7V0D71"></script>
+
+      <script>
+         window.dataLayer = window.dataLayer || [];
+         function gtag() {
+            dataLayer.push(arguments);
+         }
+         gtag("js", new Date());
+
+         gtag("config", "G-HCVT7V0D71");
+      </script>
    </head>
 
    <body id="top-header">
@@ -233,6 +246,7 @@
          onload="this.media='all'; this.onload = null"
          href="{% static 'edutim/vendors/summernote/summernote.min.css' %}"
       />
+
       <link
          rel="stylesheet"
          media="print"
@@ -240,11 +254,22 @@
          href="{% static 'edutim/vendors/summernote/summernote-bs4.min.css' %}"
       />
 
-      <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.11.3/datatables.min.css" />
+      <link
+         rel="stylesheet"
+         media="print"
+         onload="this.media='all'; this.onload = null"
+         href="{% static '/sb-admin/vendor/datatables/dataTables.bootstrap4.min.css' %}"
+      />
+
+      {% comment %} <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.11.3/datatables.min.css" /> {% endcomment %}
 
       <script src="{% static 'edutim/combine.js' %}"></script>
 
-      {% comment %} <script src="{% static 'edutim/vendors/jquery/jquery.js' %}"></script>
+      {% comment %} <script defer src="{% static '/sb-admin/vendor/datatables/jquery.dataTables.min.js' %}"></script>
+      <script defer src="{% static '/sb-admin/vendor/datatables/dataTables.bootstrap4.min.js' %}"></script> {% endcomment %}
+      
+      {% comment %}
+      <script src="{% static 'edutim/vendors/jquery/jquery.js' %}"></script>
       <script src="{% static 'edutim/vendors/jquery-ui/jquery-ui.min.js' %}"></script>
       <script src="{% static 'edutim/vendors/popper.min.js' %}"></script>
       <!-- Bootstrap 4.5 -->
@@ -255,12 +280,13 @@
       <script src="{% static 'edutim/vendors/handlebars.min.js' %}"></script>
       <script src="{% static 'edutim/vendors/moment.min.js'%}"></script>
       <script src="{% static 'edutim/vendors/summernote/summernote.min.js' %}"></script>
-      <script src="{% static 'edutim/vendors/summernote/summernote-bs4.min.js' %}"></script> {% endcomment %}
-      <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.11.3/datatables.min.js"></script>
+      <script src="{% static 'edutim/vendors/summernote/summernote-bs4.min.js' %}"></script>
+      {% endcomment %}
+      {% comment %} <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.11.3/datatables.min.js"></script> {% endcomment %}
 
-      <script src="{% static 'edutim/js/script.js' %}"></script>
+      {% comment %} <script src="{% static 'edutim/js/script.js' %}"></script> {% endcomment %}
 
-      {% block scripts %}{% endblock %}
+     
 
       <script>
          Handlebars.registerHelper("dateOnly", function (options) {
@@ -297,5 +323,7 @@
 
          $(document).ready(function () {});
       </script>
+
+      {% block scripts %}{% endblock %}
    </body>
 </html>
