--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -1,4 +1,6 @@
 {% load staticfiles %}
+{% load cache %}
+
 <!DOCTYPE html>
 <html lang="en">
    <head>
@@ -137,7 +139,7 @@
          </div>
 
          <!-- Main Menu Start -->
-
+         {% cache 500 sidebar %}
          <div class="site-navigation main_menu">
             <nav class="navbar navbar-expand-lg">
                <div class="container justify-content-center">
@@ -158,7 +160,7 @@
                <!-- / .container -->
             </nav>
          </div>
-
+         {% endcache %}
          <div class="site-navigation main_menu" id="mainmenu-area">
             <nav class="navbar navbar-expand-lg">
                <div class="container justify-content-center">
@@ -176,6 +178,8 @@
 
                   <!-- Collapse -->
                   <div class="collapse navbar-collapse justify-content-center" id="navbarMenu">
+
+                     {% cache 500 sidebar %}
                      <ul class="navbar-nav">
                         <li class="nav-item">
                            <a class="nav-link" href="/" aria-label="Home"> Home </a>
@@ -208,6 +212,7 @@
                            <a href="/contact/" class="nav-link"> Contact </a>
                         </li>
                      </ul>
+                     {% endcache %}
 
                      <ul class="header-contact-right">
                         <li>
@@ -261,6 +266,7 @@
 
       {% block content %}{% endblock %}
 
+      {% cache 500 sidebar %}
       <section class="footer pt-120">
          <div class="container">
             <div class="row">
@@ -394,7 +400,8 @@
             </div>
          </div>
       </section>
-
+      {% endcache %}
+      
       <div class="fixed-btm-top">
          <a href="#top-header" class="js-scroll-trigger scroll-to-top" aria-label="Scroll Top" alt="Scroll Top">
             <i class="fa fa-angle-up"></i>
