--- a/app_public/templates/about/about.html
+++ b/app_public/templates/about/about.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-{% cache 500 sidebar %}
+{% cache 500 about %}
     <section class="page-header">
         <div class="container">
             <div class="row justify-content-center">
