--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -264,7 +264,7 @@
 
       {% block content %}{% endblock %}
 
-      {% cache 500 sidebar %}
+      {% cache 500 footer %}
       <section class="footer pt-120">
          <div class="container">
             <div class="row">
