--- a/courses/templates/index.html
+++ b/courses/templates/index.html
@@ -1,9 +1,11 @@
 {% extends 'app_base.html' %}
 {% load staticfiles %}
 {% load course_tags %}
+{% load cache %}
 
 {% block content %}
 
+{% cache 500 home_banner %}
     <section class="banner">
         <div class="container">
             <div class="row justify-content-center">
@@ -96,7 +98,8 @@
             </div>
         </div>
     </section>
-
+    {% endcache %}
+    
     {% if courses.count > 0 %}
         <section class="section-padding popular-course-list2 pb-0 mb-3">
             <div class="container">
