--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
-   <head>
+   <head time="{% now 'jS F Y H:i:s' %}">
       <meta charset="utf-8" />
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="ie=edge" />
